...
      }
    },
    "Appearance" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Calibrating your communication profile..." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Claim My 3-Day Free Trial" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Classic" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Contact" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Continue" : {
      "comment" : "A button that lets the user continue a task.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Control any conversation." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Dark" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Default Reply Language" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "FAQ" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Frequently Asked Questions" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "FROM YOUR BOSS" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Get Started" : {
      "comment" : "A button label.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Here's what we do." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Hold to become a Text Master" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Language" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Light" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Manage on the App Store" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Non-Conforming" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "ORIGINAL TONE DETECTED" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Paste text or write here..." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Privacy Policy" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Reply" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Save Changes" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Skip Onboarding (Debug)" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "Start Free Trial" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Subscribe" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Subscription" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Terminal" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "We've got great news for you." : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "WHAT DO YOU NEED?" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Your Data is Safe With Us." : {
      "localizations" : {
        "de" : {
...
      }
    },
    "YOUR DRAFT" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Your name" : {
      "localizations" : {
        "de" : {
...
